--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
  <body> 
 <h1>Redirecting...</h1>
 <p1>this may take up to some few seconds</p1>
+<script scr="index.js">
+</script>
 </body>
 </html>
